<resources>
    <string name="app_name">IN/OUT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="name"></string>

    <string name="Version_app">1.0.1</string>
    <string name="Autor">Ксения И.</string>
    <string name="fio_hint">Пупкин Кондрат Витальевич</string>
    <string name="fio_hint2">Кондратий</string>
    <string name="button_enterence">Войти</string>
    <string name="button_enter">Вход</string>
    <string name="button_exit">Выход</string>
    <string name="about_app">О приложении</string>
    <string name="help">Тех.поддержка</string>
    <string name="who_is_it">Представиться</string>
    <string name="what_to_do">Приложите телефон к метке</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
