<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/bez2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="16dp"
        android:text="Версия:"
        android:layout_below="@+id/textView7"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/Version_app"
        android:layout_below="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:layout_marginRight="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Автор:"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:text="@string/Autor"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/textView7"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp" />

</RelativeLayout>